<resources>
    <string name="app_name">Profile Info</string>
    <string name="email_hint">Enter your email</string>
    <string name="username_hint">Enter your username</string>
    <string name="firstname_hint">Enter your first name</string>
    <string name="lastname_hint">Enter your last name</string>
    <string name="age_hint">Enter your age</string>
    <string name="save_text">Save</string>
    <string name="clear_text">Clear</string>

</resources>